# ninesui

./: .gitignore  README.md  git_app.py  main.py  pyproject.toml
apps/: container_registry.py  gitnine.py  reader.py  s3.py  storage.py  swapi.py
assets/: drill-in.tape  gitadd.tape  gitnine.tape  global-commands.tape  hover.tape  search.tape  sort.tape  swapi.tape
ninesui/: __init__.py  justui.py  styles.css
scripts/: all_vhs.sh
