[project]
name = "ninesui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.44",
    "psutil>=7.0.0",
    "pydantic>=2.11.4",
    "textual>=3.2.0",
]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
    "ruff>=0.11.9",
    "textual-dev>=1.7.0",
    "ty>=0.0.0a8",
]
